# inferx

./: Cargo.toml  MCP_ENDPOINT.md  Makefile  README.md  docker-compose.yml  docker-compose_blob.yml  func_agents.json  ltrace.py  main-skill-refactor-proposal.md  onenode_logging_config.yaml  tenant-default-design-review.md
config/: Aquila-7B.json  Baichuan-7B.json  Baichuan2-13B-Chat-4bits.json  Baichuan2-7B-Chat.json  Codestral-22B-v0.1.json  DeciLM-7B-instruct.json  DeciLM-7B.json  DeepSeek-R1-Distill-Llama-70B-AWQ.json  DeepSeek-R1-Distill-Llama-70B.json  DeepSeek-R1-Distill-Llama-70B_4gpu.json  DeepSeek-R1-Distill-Llama-8B.json  DeepSeek-R1-Distill-Qwen-1.5B.json  DeepSeek-R1-Distill-Qwen-7B.json  EXAONE-3.0-7.8B-Instruct copy.json  EXAONE-3.0-7.8B-Instruct.json  FLUX.2-klein-4B.json  Hermes-2-Pro-Llama-3-8B-AWQ-NoQuant.json  Hermes-2-Pro-Llama-3-8B-AWQ.json  Hermes-2-Pro-Llama-3-8B-AWQ1.json  Impish_Bloodmoon_12B.json  Impish_Bloodmoon_12B_GPTQ_4-bit-128.json  InternVL3_5-8B-Instruct.json  InternVL3_5-8B-Instruct_14.json  L3.3-70B-Loki-V2.0.json  Llama-2-13b-hf.json  Llama-3.2-3B-Instruct-FP8.json  Llama-3.2-3B-Instruct.json  Llama-3.2-3B-Instruct_2gpu.json  Meta-Llama-3-8B-Instruct.json  Meta-Llama-3-8B.json  Meta-Llama-3.1-70B-FP8.json  Meta-Llama-3.3-70b-instruct.json  MiniCPM-2B-dpo-bf16.json  MiniCPM-2B-sft-bf16.json  MiniCPM3-4B.json  Minitron-8B-Base.json  Mistral-7B-Instruct-v0.1.json  Mistral-7B-v0.1.json  (+144 more)
dashboard/: Makefile  (+5 more)
test/agent_gateway/: Cargo.toml  README.md
test/agent_gateway/src/: main.rs  session.rs
test/agent_gateway/webui/: index.html
(+296 files in other folders)
