[package]
name = "agent_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = { version = "0.1", features = ["time"] }
tower = { version = "0.5", features = ["util"] }
